2014-01-24   1.0.0:
-------------------
  * initial release
  * includes conda-build, conda-convert, conda-index, conda-skeleton
  * depends on new conda version 3
  * add license to info/index.json object