@@ -156,10 +156,7 @@ def execute(args, parser):
                 need_cleanup = False
 
             if not isdir(recipe_dir):
-                # See if it's a spec and the directory is in conda-recipes
-                recipe_dir = join(config.root_dir, 'conda-recipes', arg)
-                if not isdir(recipe_dir):
-                    sys.exit("Error: no such directory: %s" % recipe_dir)
+                sys.exit("Error: no such directory: %s" % recipe_dir)
 
             m = MetaData(recipe_dir)
             binstar_upload = False
